Actually finally pushing changes
Also 1.10 update